syntax = "proto3";

package auth;

option java_package = "com.pm.auth_service.grpc";
option java_multiple_files = true;

service AuthService {
  rpc Register(RegisterRequest) returns (BooleanResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Update(UpdateRequest) returns (ProfileResponse);
  rpc GetUser(GetUserRequest) returns (ProfileResponse);
  rpc DeleteUser(DeleteRequest) returns (BooleanResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string fullname = 3;
  string role = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message UpdateRequest {
  string id = 1;
  string fullname = 2;
  string email = 3;
  string password = 4;
  string token = 5;
}

message GetUserRequest {
  string username = 1;
  string token = 2;
}

message DeleteRequest {
  string id = 1;
  string token = 2;
}

message BooleanResponse {
  bool status = 1;
}

message LoginResponse {
  bool status = 1;
  string token = 2;
}

message ProfileResponse {
  string id = 1;
  string fullname = 2;
  string username = 3;
  string email = 4;
  string role = 5;
}
