syntax = "proto3";

package user;

option java_package = "com.pm.userservice.grpc";
option java_multiple_files = true;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (BooleanResponse);
  rpc ValidateUser(ValidateUserRequest) returns (BooleanResponse);
  rpc Update(UpdateRequest) returns (ProfileResponse);
  rpc GetUser(GetUserRequest) returns (ProfileResponse);
  rpc DeleteUser(DeleteUserRequest) returns (BooleanResponse);
}

message CreateUserRequest {
  string fullname = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message ValidateUserRequest {
  string email = 1;
  string password = 2;
}

message UpdateRequest {
  string id = 1;
  string fullname = 2;
  string email = 3;
  string password = 4;
  string token = 5;
}

message GetUserRequest {
  string email = 1;
  string token = 2;
}

message DeleteUserRequest {
  string id = 1;
  string token = 2;
}

message BooleanResponse {
  bool status = 1;
}

message ProfileResponse {
  string id = 1;
  string fullname = 2;
  string email = 3;
  string role = 4;
  bool success = 5;
  string message = 6;
}
